llvm/test/CodeGen/MIR/Generic/machine-function-nophis-conflict.mir
# RUN: not llc -run-pass none -o /dev/null %s 2>&1 | FileCheck %s

# Test that computed properties are not conflicting with explicitly set
# properties

---
# CHECK: error: {{.*}}: TestNoPhisOverrideConflict has explicit property NoPhi, but contains at least one PHI
name:            TestNoPhisOverrideConflict
noPhis: true
tracksRegLiveness: true
body: |
  bb.0:
    %0:_(s32) = G_IMPLICIT_DEF

  bb.1:
    %1:_(s32) = PHI %0, %bb.0, %1, %bb.1
    G_BR %bb.1
...
